--- a/src/app/features/post-login/inspection/record/update-record/update-record.component.html
+++ b/src/app/features/post-login/inspection/record/update-record/update-record.component.html
@@ -14,10 +14,10 @@
     [visible]="formSubmitted"
     [completed]="formCompleted"
     [failed]="formFailed"
-    [header]="'Tạo mới mục kiểm tra'"
-    [progress]="'Đang tạo mới mục kiểm tra'"
-    [complete]="'Tạo mới mục kiểm tra thành công'"
-    [fail]="'Tạo mới mục kiểm tra không thành công'"
+    [header]="'Cập nhật mục kiểm tra'"
+    [progress]="'Đang cập nhật mục kiểm tra'"
+    [complete]="'Cập nhật mục kiểm tra thành công'"
+    [fail]="'Cập nhật mục kiểm tra không thành công'"
   ></app-loading-complete-dialog>
   <form class="container-fluid" [formGroup]="recordForm" (ngSubmit)="onSubmit()">
     <div class="row">
