fix dashboard principal

--- a/src/app/features/post-login/dashboard/dashboard.component.html
+++ b/src/app/features/post-login/dashboard/dashboard.component.html
@@ -327,9 +327,12 @@
             <div class="col-md-6">
               <label class="fw-medium">Tên</label>
             </div>
-            <div class="col-md-6">
-              <label class="fw-medium"
+            <div class="col-md-6 d-flex justify-content-end">
+              <!-- <label class="fw-medium"
                 >Tổng số: {{ totalNumberOfInspectionPlan }}</label
+              > -->
+              <span class="redirect-link" (click)="viewMyInspection()"
+                >Xem thêm</span
               >
             </div>
             <div class="row">
@@ -372,78 +375,168 @@
               </ng-template>
             </div>
           </div>
+          <div class="d-flex justify-content-end"></div>
         </div>
       </div>
-      <div class="col-md-4">
+      <div class="col-md-5">
         <div class="card p-3">
           <div class="row">
-            <div class="col-md-6">
+            <div class="col-md-6 mb-2">
               <label class="fw-medium fs-18">Công việc hiện tại</label>
             </div>
-            <div class="col-md-6">
+            <div class="col-md-6 mb-2">
               <label class="fw-medium">Trạng thái</label>
+              <p-dropdown
+                placeholder="Chọn 1 trạng thái"
+                [options]="statuses"
+                [(ngModel)]="selectedStatus"
+                [showClear]="true"
+                (onChange)="loadAsm()"
+                dataKey="value"
+                optionValue="value"
+              >
+                <ng-template let-status pTemplate="item">
+                  <p-tag
+                    [rounded]="true"
+                    [severity]="getStatusSeverity(status.value)"
+                    [value]="status.label"
+                  ></p-tag>
+                </ng-template>
+              </p-dropdown>
+            </div>
+            <div class="col-md-6 mb-2">
+              <label class="fw-medium">Tên</label>
+            </div>
+            <div class="col-md-6 mb-2 d-flex justify-content-end">
+              <!-- <label class="fw-medium">Trạng thái</label> -->
+              <span class="redirect-link" (click)="viewMyInspection()"
+                >Xem thêm</span
+              >
+            </div>
+            <ng-container *ngIf="taskTrees && taskTrees.length > 0">
+              <ng-container *ngFor="let task of taskTrees; let i = index">
+                <div class="row mb-2">
+                  <div class="col-md-6 td-content">
+                    <span>{{ task.rootAssignmentName }}</span>
+                  </div>
+                  <div class="col-md-4">
+                    <p-tag
+                      [rounded]="true"
+                      [severity]="
+                        getStatusSeverity(task?.rootAssignmentStatus?.statusId)
+                      "
+                      [value]="task?.rootAssignmentStatus?.statusName"
+                    ></p-tag>
+                  </div>
+                  <div class="col-md-2 d-flex justify-content-end">
+                    <button
+                      pButton
+                      class="action-item d-flex justify-content-center align-items-center"
+                      (click)="viewAsmDetail(task.rootAssignmentId)"
+                    >
+                      <i class="bi bi-info-circle-fill"></i>
+                    </button>
+                  </div>
+                </div>
+              </ng-container>
+            </ng-container>
+
+            <ng-template #noInspecPlan>
+              <div class="col-md-12">
+                <label class="fw-medium color-gray"
+                  >Không có công việc nào
+                </label>
+              </div>
+            </ng-template>
+          </div>
+        </div>
+      </div>
+      <div class="col-md-3">
+        <div class="card p-3">
+          <label class="fw-medium fs-18 mb-3">Truy cập nhanh</label>
+          <div>
+            <div class="card mb-2 shortcut-item" (click)="viewIssueDetail()">
+              <div
+                class="p-3 d-flex justify-content-between align-items-center"
+              >
+                <div>
+                  <span class="fs-18">Xem kế hoạch kiểm tra năm</span>
+                </div>
+                <div class="shortcut-icon">
+                  <i class="bi bi-caret-right-fill"></i>
+                </div>
+              </div>
+            </div>
+            <div class="card mb-2 shortcut-item" (click)="viewAsmTree()">
+              <div
+                class="p-3 d-flex justify-content-between align-items-center"
+              >
+                <div>
+                  <span class="fs-18">Xem danh sách công việc</span>
+                </div>
+                <div class="shortcut-icon">
+                  <i class="bi bi-caret-right-fill"></i>
+                </div>
+              </div>
+            </div>
+            <div
+              class="card mb-2 shortcut-item"
+              (click)="viewSchoolInspection()"
+            >
+              <div
+                class="p-3 d-flex justify-content-between align-items-center"
+              >
+                <div>
+                  <span class="fs-18">Xem thanh tra ở trường bạn</span>
+                </div>
+                <div class="shortcut-icon">
+                  <i class="bi bi-caret-right-fill"></i>
+                </div>
+              </div>
             </div>
           </div>
         </div>
       </div>
-      <div class="col-md-4"></div>
     </div>
+
     <div class="col-md-4">
-      <label class="fw-medium">Trạng thái</label>
-      <p-dropdown
-        placeholder="Chọn 1 trạng thái"
-        [options]="statuses"
-        [(ngModel)]="selectedStatus"
-        [showClear]="true"
-        (onChange)="loadAsm()"
-        dataKey="value"
-        optionValue="value"
-      >
-        <ng-template let-status pTemplate="item">
-          <p-tag
-            [rounded]="true"
-            [severity]="getStatusSeverity(status.value)"
-            [value]="status.label"
-          ></p-tag>
-        </ng-template>
-      </p-dropdown>
+      <div class="card p-3">
+        <h6 class="mat-headline-6">Thống kê công việc toàn trường</h6>
+        <div class="row" *ngIf="asmChartData">
+          <div class="col-md-7">
+            <tui-ring-chart
+              size="s"
+              [value]="asmChartData.data"
+              [(activeItemIndex)]="index_asm"
+            >
+              {{ sum(asmChartData, index_asm) }}
+              <div>
+                {{ label(asmChartData, index_asm) }}
+              </div>
+            </tui-ring-chart>
+          </div>
+          <div class="row col-md-5">
+            <div
+              *ngFor="let item of inspectionPlanDataChart.labels; let i = index"
+            >
+              <div class="row">
+                <div class="col-md-2">
+                  <div class="box-color" [ngClass]="'bg-color-' + i"></div>
+                </div>
+                <div class="col-md-10">
+                  <label class="fw-medium">{{ item }}</label>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
 
-      <table class="table table-striped">
-        <tr>
-          <th>Công việc hiện tại</th>
-          <th>Tổng số: {{ totalNumberOfAsm }}</th>
-        </tr>
-        <tbody *ngIf="taskTrees && taskTrees.length > 0">
-          <tr *ngFor="let task of taskTrees; let i = index">
-            <td>{{ task.rootAssignmentName }}</td>
-            <td>
-              <p-tag
-                [severity]="
-                  getStatusSeverity(task?.rootAssignmentStatus?.statusId)
-                "
-                [value]="task?.rootAssignmentStatus?.statusName"
-              ></p-tag>
-            </td>
-
-            <td>
-              <button pButton (click)="viewAsmDetail(task.rootAssignmentId)">
-                Xem chi tiết
-              </button>
-            </td>
-          </tr>
-        </tbody>
-      </table>
-    </div>
-
-    <div>
-      <p>Lối tắt</p>
-      <button pButton (click)="viewIssueDetail()">
-        Xem kế hoạch kiểm tra năm
-      </button>
-      <button pButton (click)="viewAsmTree()">Xem danh sách công việc</button>
-      <button pButton (click)="viewSchoolInspection()">
-        Xem thanh tra ở trường bạn
-      </button>
+        <!-- <p-chart
+            type="pie"
+            [data]="inspectionPlanDataChart"
+            [options]="inspectionPlanOptionsChart"
+          ></p-chart> -->
+      </div>
     </div>
     <div class="col-md-4">
       <p-chart
