--- a/src/app/features/post-login/dashboard/dashboard.component.scss
+++ b/src/app/features/post-login/dashboard/dashboard.component.scss
@@ -91,6 +91,23 @@
     height: 20px;
     border-radius: 50%;
 }
+.action-item {
+    width: 35px;
+    height: 35px;
+    background-color: $primary;
+    border-color: $primary;
+    border-radius: 50%;
+    font-size: 16px;
+    &:hover {
+        background-color: $primary-hover;
+        border-color: $primary-hover;
+        cursor: pointer;
+    }
+    i {
+        color: #fff;
+        align-items: center;
+    }
+}
 // .p-dropdown-label {
 //     font-size: 16px !important;
 // }
