--- a/src/app/components/notification-list/notification-list.component.html
+++ b/src/app/components/notification-list/notification-list.component.html
@@ -12,8 +12,8 @@
               (click)="onClickUnseenNotification()">Chưa xem
       </button>
     </div>
-    <div class="dropdown-divider"></div>
-    <div class="notification-item-list">
+    <div class="dropdown-divider mb-0"></div>
+    <div class="notification-item-list" (scroll)="onNotificationListScroll($event)">
       <app-notification-list-all
         *ngIf="showAllNotification"
         [notificationItems]="notificationItems">
@@ -23,7 +23,7 @@
         [unseenNotificationDtos]="unseenNotificationDtos">
       </app-notification-list-unseen>
     </div>
-    <div class="dropdown-divider"></div>
+    <div class="dropdown-divider mt-0"></div>
     <div class="notification-footer"></div>
   </div>
 </div>
