--- a/src/app/components/notification-list/notification-list.component.scss
+++ b/src/app/components/notification-list/notification-list.component.scss
@@ -33,6 +33,7 @@
   .notification-list{
     width: 370px;
     max-height: 500px;
+    background-color: #f8f9fa;
     .notification-change-view{
       .button-active{
         background-color: $primary-hover;
@@ -55,6 +56,7 @@
     .notification-item-list{
       max-height: 350px;
       overflow-y: auto;
+      background-color: white;
     }
     .notification-footer{
       height: 20px;
