--- a/src/app/features/post-login/issue/issue-list/issue-list.component.html
+++ b/src/app/features/post-login/issue/issue-list/issue-list.component.html
@@ -61,6 +61,40 @@
                   tooltipPosition="top"
                 ></p-columnFilter>
               </div>
+              <div>
+                <p-columnFilter
+                  field="isActive"
+                  matchMode="equals"
+                  [showMenu]="false"
+                >
+                  <ng-template
+                    pTemplate="filter"
+                    let-value
+                    let-filter="filterCallback"
+                  >
+                    <p-dropdown
+                      [ngModel]="value"
+                      [options]="statuses"
+                      (onChange)="filter($event.value)"
+                      placeholder="Tất cả"
+                      [showClear]="true"
+                    >
+                      <ng-template let-option pTemplate="item">
+                        <p-tag
+                          class="status"
+                          [severity]="option.value ? 'success' : 'danger'"
+                          [rounded]="true"
+                        >
+                          {{ option.label }}
+                        </p-tag>
+                      </ng-template>
+                    </p-dropdown>
+                  </ng-template>
+                </p-columnFilter>
+              </div>
+
+
+
             </div>
           </div>
           <div>
@@ -141,6 +175,16 @@
               </div>
             </div>
           </th>
+          <th pSortableColumn="isActive">
+            <div class="d-flex justify-content-between align-items-center">
+              <div>
+                Trạng thái
+                <p-sortIcon field="isActive"></p-sortIcon>
+              </div>
+            </div>
+          </th>
+
+
           <th class="th-small"></th>
         </tr>
       </ng-template>
@@ -176,6 +220,15 @@
             <span class="p-column-title">Số lượng BKTNB</span>
             {{ issue.inspectorGroupSize }}
           </td>
+          <td>
+            <p-tag
+              class="status"
+              [severity]="issue.isActive ? 'success' : 'danger'"
+              [rounded]="true"
+            >
+              {{ issue.isActive ? "Đang tiến hành" : "Kết thúc" }}
+            </p-tag>
+          </td>
           <td
             style="text-align: center"
             class="d-flex td-action justify-content-center align-items-center"
@@ -194,6 +247,7 @@
               class="action-item d-flex justify-content-center align-items-center mx-2"
               (click)="navigateToUpdate(issue.issueId)"
               *ngIf="isDirector"
+
             >
               <i class="bi bi-pencil-fill"></i>
             </div>
@@ -208,3 +262,4 @@
     </p-table>
   </div>
 </ng-container>
+
