fix assignment link

--- a/src/app/components/sidebar/sidebar.component.html
+++ b/src/app/components/sidebar/sidebar.component.html
@@ -78,7 +78,7 @@
           routerLinkActive="active"
           *ngIf="isPrincipal || isSchoolNormalEmp"
         >
-          <a class="" [routerLink]="['/assignassignment/' + issueId]">
+          <a class="" [routerLink]="['/assign-assignment/' + issueId]">
             <div>
               <i class="bi bi-list-check"></i>
               &nbsp; Danh sách công việc
@@ -90,7 +90,7 @@
           routerLinkActive="active"
           *ngIf="isDirector || isPrincipal || isSchoolNormalEmp"
         >
-          <a class="" [routerLink]="['/listAssignment']">
+          <a class="" [routerLink]="['/list-assignment']">
             <div>
               <i class="bi bi-list-check"></i>
               &nbsp; Hồ sơ các năm
