--- a/src/app/features/post-login/school-initiation-plan/school-initiation-plan-detail/school-initiation-plan-detail.component.html
+++ b/src/app/features/post-login/school-initiation-plan/school-initiation-plan-detail/school-initiation-plan-detail.component.html
@@ -458,7 +458,7 @@
         <div class="row">
           <div class="col-md-8">
             <button pButton class="mb-2" (click)="docHistoryVisible = true">
-              Xem lịch sử phê duyệt tài liệu
+              Lịch sử phê duyệt
             </button>
           </div>
           <!-- <div class="col-md-4">
