--- a/src/app/features/post-login/school-side/initiation-plan/initiation-plan-detail/initiation-plan-detail.component.html
+++ b/src/app/features/post-login/school-side/initiation-plan/initiation-plan-detail/initiation-plan-detail.component.html
@@ -393,7 +393,7 @@
           </div>
           <div class="col-md-4">
             <button pButton class="mb-2" (click)="docHistoryVisible = true">
-              Xem lịch sử phê duyệt tài liệu
+              Lịch sử phê duyệt
             </button>
           </div>
         </div>
